--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,13 @@ verify-repo:
   script:
     - repoman --mode scan -xq || exit 0
 
+check-fetch:
+  image: $CONTAINER_TEST_IMAGE
+  stage: test
+  script:
+    - for i in "$installed_overlay"/sys-fs/zfs/*.ebuild; do ebuild "$i" unpack; done
+    - for i in "$installed_overlay"/sys-fs/zfs-kmod/*.ebuild; do ebuild "$i" unpack; done
+
 release-image:
   stage: release
   tags:
@@ -34,4 +41,5 @@ release-image:
 stages:
   - verify
   - build
+  - test
   - release
