Check linux-be invariants
Ensuring that a merge of upstream
does not overwrite the linux-be-specific changes
has turned out to be error-prone and hard to do systematically.

At least before a better process of merging upstream /
resolving conflicts is conceived of,
a script for checking if the important changes are present is useful.

Add a sanity.sh script that does that and run it in CI.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,13 @@ verify-repo:
   script:
     - repoman --mode scan -xq || exit 0
 
+verify-linux-be-changes:
+  image:
+    name: bitnami/minideb
+  stage: verify
+  script:
+    - ./sanity.sh
+
 check-fetch:
   image: $CONTAINER_TEST_IMAGE
   stage: test
